1999-05-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Include tests/Makefile.rules.
	(type_SOURCES): New variable.
	(ForEachRandomized_SOURCES, ForEach_SOURCES,
	ActionGroupRandomized_SOURCES, ActionGroup_SOURCES,
	ConcurrentGroupRandomized_SOURCES, ConcurrentGroup_SOURCES): Use it.

	* ActionGroup_test.m, ConcurrentGroup_test.m: Add phase info, using
	MIXIN_CREATE for dual include of Holder.m.

	* Holder.m: Add #ifdef on MIXIN_CREATE for including methods
	per phase.

	* ActionGroup_test.h (ActionGroup_test_c): Renamed from
	ActionGroup_test.

	* tactivity.[hm]: New files.

	* ActionGroup.m, ActionGroupRandomized.m, ConcurrentGroup.m,
	ConcurrentGroupRandomized.m, ForEach.m, ForEachRandomized.m:
	Include tactivity.h instead of ActionGroup_test.h or
	ConcurrentGroup_test.h.
	
1999-02-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ESSwarm.m ([ESSwarm -buildActions]): Use setKeepEmptyFlag: 
	instead of setKeepEmpty:.  Use YES instead of 1.

1999-02-02  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* ESSwarm.m: New file. 

	* ESSwarm.h: Likewise.

	* EmptySchedule.m: Likewise.
	
	* Makefile.am (EXTRA_DIST): Add Holder.h and Holder.m to EXTRA_DIST.
	

1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (etc_dir): Use include $(top_builddir)/etc instead.
	(check_PROGRAMS): Use instead of noinst_PROGRAMS.
	(TESTS): Depend on $(check_PROGRAMS).

1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.am (etc_dir): Add new variable to allow inclusion of 
	Makefile.tests form build area.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ActionGroupRandomized.m, ConcurrentGroup.m,
	ConcurrentGroupRandomized.m, DynamicSchedule.m,
	DynamicScheduleRepeat.m, ForEach.m, ForEachRandomized.m (main):
	Use initSwarmBatch instead of initSwarm.

	* Makefile.am (TESTS_ENVIRONMENT): Set SWARM_INHIBIT_ARCHIVER_LOAD.

1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>
