@@ -1,3 +1,7 @@
+1999-05-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Makefile.am ($(OBJECTS)): Depend on headers.
+
 1999-05-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am: Include tests/Makefile.rules.
@@ -42,7 +46,6 @@
 
 	* Makefile.am (etc_dir): Use include $(top_builddir)/etc instead.
 	(check_PROGRAMS): Use instead of noinst_PROGRAMS.
-	(TESTS): Depend on $(check_PROGRAMS).
 
 1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>
 
